# muaddib-chess

./: .clang-format  .gitignore  README.md  board.cpp  board.h  check_pin_masks.cpp  check_pin_masks.h  chess  evaluate.cpp  evaluate.h  helpers.cpp  helpers.h  magics.h  main.cpp  makefile  move.h  movegen.cpp  movegen.h  precompute_masks.cpp  precompute_masks.h  search.cpp  search.h  test_suite.cpp  test_suite.h
src/: CMakeLists.txt  benchmark.cpp  benchmark.h  bit_manip.h  bitboard.cpp  bitboard.h  board.cpp  board.h  board_state.cpp  board_state.h  check_pin_masks.cpp  check_pin_masks.h  cli.cpp  cli.h  constants.h  evaluate.cpp  evaluate.h  helpers.cpp  helpers.h  main.cpp  move.cpp  move.h  move_list.h  movegen.cpp  movegen.h  precompute_masks.cpp  precompute_masks.h  search.cpp  search.h  test_suite.cpp  test_suite.h  transpose_table.cpp  transpose_table.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
src/gui/: CMakeLists.txt  game.cpp  game.h  piece_sprite.cpp  piece_sprite.h
